@@ -121,6 +121,12 @@
 
 (defmacro package-lock (package) `(logbitp 0 (package-%bits ,package)))
 
+(defmacro with-deferred-package-names (&body body)
+  #+sb-xc-host
+  `(progn ,@body)
+  #-sb-xc-host
+  `(call-with-deferred-package-names (lambda () ,@body)))
+
 ;;;; IN-PACKAGE
 (proclaim '(special *package*))
 (sb-xc:defmacro in-package (string-designator)
