@@ -15,6 +15,8 @@ changes relative to sbcl-2.2.3:
   * platform support:
     ** RUN-PROGRAM is faster on Linux and FreeBSD if close_range(2) is
        available.
+  * bug fix: block compilation now interacts more correctly with the creation
+    of new packages.
 
 changes in sbcl-2.2.3 relative to sbcl-2.2.2:
   * minor incompatible change: SB-THREAD:MUTEX-OWNER may return :THREAD-DEAD
